Fixed problem with the mountain parallax stretching screen on android

--- a/css/main.css
+++ b/css/main.css
@@ -61,9 +61,8 @@ a {
 	position: fixed;
 	top: 0;
 	width: 100%;
-	/*background: rgba(50,50,50,0.8);*/
 	z-index: 4;
-	
+	min-height: 50px;
 }
 
 .menuItem {
@@ -74,7 +73,6 @@ a {
 	background: rgba(100,100,100,0.6);
 	min-width: 1em;
 	max-width: 2em;
-	min-height: 1em;
 }
 
 .selectedMenuItem {
@@ -86,7 +84,6 @@ a {
 	cursor: default;
 	min-width: 1em;
 	max-width: 2em;
-	min-height: 1em;
 }
 /*-----MENU BAR-------*/
 
@@ -226,25 +223,30 @@ a {
 	top: 0;
 	left: 0;
 	width: 90%;
-	height: 90%;
-	margin: 5% 5% 0 5%;
+	height: 85%;
+	margin: 10% 5% 0 5%;
 }
 /*--------MISC--------*/
 
 /*-------HOMEPAGE----*/
 #mountainScene {
-	position: absolute;
-	bottom: 0;
-	left: -10%;
-	width: 120%;
-	height: 50%;
+	width:100%;
+	height: auto;
 	overflow: hidden;
-	margin: 0;
 }
 
-#mountainScene img{
+#mountainLayers img{
 	display: block;
+	width: 120%;
+	height: 100%;
+	margin-left: -10%;
+}
+
+#sceneContainer {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	height: 50%;
 	width: 100%;
-	height: 100%
 }
 /*-------HOMEPAGE----*/
